--- a/Collections/Presentation/Presentation-Domain/Screen/Signup/Base.lproj/SignupViewController.storyboard
+++ b/Collections/Presentation/Presentation-Domain/Screen/Signup/Base.lproj/SignupViewController.storyboard
@@ -141,7 +141,7 @@
                         <outlet property="loginButton" destination="ZCi-5G-Dq5" id="HvY-XB-XuS"/>
                         <outlet property="passwordConfirmationTextField" destination="Leu-f1-mfE" id="zqb-q2-raP"/>
                         <outlet property="passwordTextField" destination="BS3-2F-isb" id="VY1-1m-xBH"/>
-                        <outlet property="secureTextChangeButton" destination="YGP-JC-Ey3" id="5gj-9s-MSK"/>
+                        <outlet property="secureButton" destination="YGP-JC-Ey3" id="dUj-R6-S4h"/>
                         <outlet property="signupButton" destination="bMa-gU-6jb" id="rpJ-ZA-RHh"/>
                         <outlet property="stackView" destination="JQ1-y2-NAh" id="0Fw-jo-wKl"/>
                         <outlet property="validateEmailLabel" destination="l0V-IC-vay" id="6OQ-qL-6QZ"/>
