--- a/BookList-iOS/Presentation/Presentation-Domain/Screen/Chat/ChatSelect/View/ChatSelectTableViewCell.xib
+++ b/BookList-iOS/Presentation/Presentation-Domain/Screen/Chat/ChatSelect/View/ChatSelectTableViewCell.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="400" height="100"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H8Y-1b-hOE">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch_Image" translatesAutoresizingMaskIntoConstraints="NO" id="H8Y-1b-hOE">
                         <rect key="frame" x="10" y="10" width="80" height="80"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="H8Y-1b-hOE" secondAttribute="height" id="hxi-Gr-ofI"/>
@@ -75,4 +75,7 @@
             <point key="canvasLocation" x="31.884057971014496" y="120.53571428571428"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Launch_Image" width="150" height="150"/>
+    </resources>
 </document>
