--- a/BookList-iOS/Presentation/Presentation-Domain/Screen/Chat/ChatRoom/ChatRoomViewController.storyboard
+++ b/BookList-iOS/Presentation/Presentation-Domain/Screen/Chat/ChatRoom/ChatRoomViewController.storyboard
@@ -19,7 +19,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ppI-h6-4Rs">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" red="0.49721240741944694" green="0.59721282126442021" blue="0.85238477918836808" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ptI-28-3Rw"/>
