--- a/BookList-iOS/Presentation/Presentation-Domain/Screen/Chat/ChatRoom/View/OtherMessageCell/OtherMessageTableViewCell.xib
+++ b/BookList-iOS/Presentation/Presentation-Domain/Screen/Chat/ChatRoom/View/OtherMessageCell/OtherMessageTableViewCell.xib
@@ -11,15 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="130" id="KGk-i7-Jjw" customClass="ChatRoomTableViewCell" customModule="BookList_iOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="398" height="130"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="75" id="KGk-i7-Jjw" customClass="OtherMessageTableViewCell" customModule="BookList_iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="409" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="398" height="130"/>
+                <rect key="frame" x="0.0" y="0.0" width="409" height="75"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch_Image" translatesAutoresizingMaskIntoConstraints="NO" id="17Q-TG-PO5">
-                        <rect key="frame" x="10" y="40" width="50" height="50"/>
+                        <rect key="frame" x="10" y="12.5" width="50" height="50"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="17Q-TG-PO5" secondAttribute="height" id="aaZ-Lz-lVt"/>
                             <constraint firstAttribute="width" constant="50" id="wRW-r9-Fzo"/>
@@ -31,7 +31,7 @@
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="User Message" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BEa-XF-UbQ">
-                        <rect key="frame" x="80" y="10" width="200" height="110"/>
+                        <rect key="frame" x="80" y="10" width="200" height="55"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="200" id="kDX-2j-DIR"/>
@@ -49,7 +49,7 @@
                         </userDefinedRuntimeAttributes>
                     </textView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RRM-KW-DeF">
-                        <rect key="frame" x="285" y="99" width="38" height="21"/>
+                        <rect key="frame" x="285" y="44" width="38" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -71,7 +71,7 @@
                 <outlet property="userIconImageView" destination="17Q-TG-PO5" id="fXc-XZ-3nX"/>
                 <outlet property="userMessageTextView" destination="BEa-XF-UbQ" id="3Yw-bg-C6Y"/>
             </connections>
-            <point key="canvasLocation" x="42.028985507246382" y="122.54464285714285"/>
+            <point key="canvasLocation" x="50.000000000000007" y="104.12946428571428"/>
         </tableViewCell>
     </objects>
     <resources>
