修正: ChatRoomセル、Timeラベルのサイズ

--- a/BookList-iOS/Presentation/Presentation-Domain/Screen/Chat/ChatRoom/View/OtherMessageCell/OtherMessageTableViewCell.xib
+++ b/BookList-iOS/Presentation/Presentation-Domain/Screen/Chat/ChatRoom/View/OtherMessageCell/OtherMessageTableViewCell.xib
@@ -49,8 +49,8 @@
                         </userDefinedRuntimeAttributes>
                     </textView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RRM-KW-DeF">
-                        <rect key="frame" x="285" y="44" width="38" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="285" y="55" width="24" height="10"/>
+                        <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="10"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
