--- a/BookList-iOS/Presentation/Presentation-Domain/Screen/Chat/ChatRoom/View/KeyboardAccessory/KeyboardAccessoryView.xib
+++ b/BookList-iOS/Presentation/Presentation-Domain/Screen/Chat/ChatRoom/View/KeyboardAccessory/KeyboardAccessoryView.xib
@@ -12,45 +12,72 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="KeyboardAccessoryView" customModule="BookList_iOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="500" height="95"/>
+            <rect key="frame" x="0.0" y="0.0" width="396" height="95"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="メッセージ送信用" translatesAutoresizingMaskIntoConstraints="NO" id="tmY-AB-acX" customClass="IBDesignableTextView" customModule="BookList_iOS" customModuleProvider="target">
-                    <rect key="frame" x="10" y="10" width="406" height="75"/>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="メッセージ送信用" translatesAutoresizingMaskIntoConstraints="NO" id="tmY-AB-acX" customClass="IBDesignableTextView" customModule="BookList_iOS" customModuleProvider="target">
+                    <rect key="frame" x="10" y="10" width="334" height="75"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <color key="textColor" systemColor="labelColor"/>
-                    <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="18"/>
+                    <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="16"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                            <real key="value" value="15"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="color" keyPath="layerColor">
+                            <color key="value" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                            <real key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                            <color key="value" red="0.75406885150000003" green="0.75408679249999999" blue="0.75407713649999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                 </textView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RiC-Ge-Lc6">
-                    <rect key="frame" x="426" y="15.5" width="64" height="64"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RiC-Ge-Lc6" customClass="IBDesignableButton" customModule="BookList_iOS" customModuleProvider="target">
+                    <rect key="frame" x="354" y="53" width="32" height="32"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="RiC-Ge-Lc6" secondAttribute="height" id="JR4-Jg-r0U"/>
-                        <constraint firstAttribute="width" constant="64" id="cfB-th-K6x"/>
+                        <constraint firstAttribute="width" constant="32" id="cfB-th-K6x"/>
                     </constraints>
                     <state key="normal" image="Send"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                            <real key="value" value="15"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="tmY-AB-acX" secondAttribute="bottom" constant="10" id="808-0Q-UbL"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="tmY-AB-acX" secondAttribute="bottom" constant="10" id="808-0Q-UbL"/>
                 <constraint firstItem="RiC-Ge-Lc6" firstAttribute="leading" secondItem="tmY-AB-acX" secondAttribute="trailing" constant="10" id="DdO-nQ-UZE"/>
-                <constraint firstItem="RiC-Ge-Lc6" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="L1a-Bx-DPY"/>
                 <constraint firstItem="tmY-AB-acX" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="Nx4-hx-KwC"/>
                 <constraint firstItem="tmY-AB-acX" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="PFw-N2-e3P"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="RiC-Ge-Lc6" secondAttribute="trailing" constant="10" id="aEa-IH-4OK"/>
+                <constraint firstItem="tmY-AB-acX" firstAttribute="bottom" secondItem="RiC-Ge-Lc6" secondAttribute="bottom" id="bPl-tb-5O5"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="sendButton" destination="RiC-Ge-Lc6" id="bQa-ir-DcE"/>
                 <outlet property="sendTextView" destination="tmY-AB-acX" id="rDS-zZ-UMh"/>
             </connections>
-            <point key="canvasLocation" x="147.82608695652175" y="-130.91517857142856"/>
+            <point key="canvasLocation" x="72.463768115942031" y="-130.91517857142856"/>
         </view>
     </objects>
+    <designables>
+        <designable name="RiC-Ge-Lc6">
+            <size key="intrinsicContentSize" width="16" height="22"/>
+        </designable>
+        <designable name="tmY-AB-acX">
+            <size key="intrinsicContentSize" width="138" height="40"/>
+        </designable>
+    </designables>
     <resources>
-        <image name="Send" width="32" height="32"/>
+        <image name="Send" width="16" height="16"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
