--- a/BookList-iOS/Presentation/Presentation-Domain/Screen/Chat/ChatRoom/View/MyMessageCell/MyMessageTableViewCell.xib
+++ b/BookList-iOS/Presentation/Presentation-Domain/Screen/Chat/ChatRoom/View/MyMessageCell/MyMessageTableViewCell.xib
@@ -11,15 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="80" id="KGk-i7-Jjw" customClass="MyMessageTableViewCell" customModule="BookList_iOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="80"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="75" id="KGk-i7-Jjw" customClass="MyMessageTableViewCell" customModule="BookList_iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="393" height="80"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="User Message" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wro-Sv-EuK">
-                        <rect key="frame" x="173" y="10" width="200" height="60"/>
+                        <rect key="frame" x="108" y="10" width="200" height="55"/>
                         <color key="backgroundColor" systemColor="systemGreenColor"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="200" id="EY8-hu-LuM"/>
@@ -29,7 +29,7 @@
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                <real key="value" value="15"/>
+                                <real key="value" value="16"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
                                 <real key="value" value="0.0"/>
@@ -37,7 +37,7 @@
                         </userDefinedRuntimeAttributes>
                     </textView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="225-Yc-oL9">
-                        <rect key="frame" x="144" y="60" width="24" height="10"/>
+                        <rect key="frame" x="79" y="55" width="24" height="10"/>
                         <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="10"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -46,8 +46,8 @@
                 <constraints>
                     <constraint firstItem="wro-Sv-EuK" firstAttribute="bottom" secondItem="225-Yc-oL9" secondAttribute="bottom" id="3ZF-lP-Z0U"/>
                     <constraint firstItem="wro-Sv-EuK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="FOC-Tf-xBZ"/>
-                    <constraint firstAttribute="trailing" secondItem="wro-Sv-EuK" secondAttribute="trailing" constant="20" id="Sxv-cg-cmP"/>
                     <constraint firstAttribute="bottom" secondItem="wro-Sv-EuK" secondAttribute="bottom" constant="10" id="WYy-Hp-bfj"/>
+                    <constraint firstAttribute="trailing" secondItem="wro-Sv-EuK" secondAttribute="trailing" constant="12" id="jHA-i3-DCV"/>
                     <constraint firstItem="wro-Sv-EuK" firstAttribute="leading" secondItem="225-Yc-oL9" secondAttribute="trailing" constant="5" id="yoO-I3-CGM"/>
                 </constraints>
             </tableViewCellContentView>
@@ -56,7 +56,7 @@
                 <outlet property="sendTimeLabel" destination="225-Yc-oL9" id="dU2-9D-nUw"/>
                 <outlet property="userMessageTextView" destination="wro-Sv-EuK" id="XFD-u8-xCp"/>
             </connections>
-            <point key="canvasLocation" x="-189.13043478260872" y="119.86607142857142"/>
+            <point key="canvasLocation" x="-242.0289855072464" y="118.19196428571428"/>
         </tableViewCell>
     </objects>
     <resources>
