チャットメッセージの送信者によってセルの切り分け

--- a/BookList/Presentation/Presentation-Domain/Screen/Chat/ChatRoom/View/OtherMessageCell/OtherMessageTableViewCell.xib
+++ b/BookList/Presentation/Presentation-Domain/Screen/Chat/ChatRoom/View/OtherMessageCell/OtherMessageTableViewCell.xib
@@ -19,22 +19,22 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch_Image" translatesAutoresizingMaskIntoConstraints="NO" id="17Q-TG-PO5">
-                        <rect key="frame" x="10" y="12.5" width="50" height="50"/>
+                        <rect key="frame" x="10" y="17.5" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="17Q-TG-PO5" secondAttribute="height" id="aaZ-Lz-lVt"/>
-                            <constraint firstAttribute="width" constant="50" id="wRW-r9-Fzo"/>
+                            <constraint firstAttribute="width" constant="40" id="wRW-r9-Fzo"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                <real key="value" value="25"/>
+                                <real key="value" value="20"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="User Message" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BEa-XF-UbQ">
-                        <rect key="frame" x="80" y="10" width="200" height="55"/>
+                        <rect key="frame" x="70" y="16" width="115.5" height="49"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="200" id="kDX-2j-DIR"/>
+                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="200" id="kDX-2j-DIR"/>
                         </constraints>
                         <color key="textColor" systemColor="labelColor"/>
                         <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="15"/>
@@ -49,7 +49,7 @@
                         </userDefinedRuntimeAttributes>
                     </textView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RRM-KW-DeF">
-                        <rect key="frame" x="285" y="55" width="24" height="10"/>
+                        <rect key="frame" x="190.5" y="55" width="24" height="10"/>
                         <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="10"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -58,7 +58,7 @@
                 <constraints>
                     <constraint firstItem="17Q-TG-PO5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="D1c-J9-Sw6"/>
                     <constraint firstItem="BEa-XF-UbQ" firstAttribute="bottom" secondItem="RRM-KW-DeF" secondAttribute="bottom" id="LyT-dv-ekn"/>
-                    <constraint firstItem="BEa-XF-UbQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="eop-F1-oEo"/>
+                    <constraint firstItem="BEa-XF-UbQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="eop-F1-oEo"/>
                     <constraint firstItem="RRM-KW-DeF" firstAttribute="leading" secondItem="BEa-XF-UbQ" secondAttribute="trailing" constant="5" id="rdZ-2A-B3a"/>
                     <constraint firstItem="17Q-TG-PO5" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="tjH-f3-ejj"/>
                     <constraint firstItem="BEa-XF-UbQ" firstAttribute="leading" secondItem="17Q-TG-PO5" secondAttribute="trailing" constant="20" id="ufV-NS-eMN"/>
